--- a/styles.css
+++ b/styles.css
@@ -46,4 +46,191 @@ body{
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  color: #727272;
+  background-color: #F7CD75;
+}
+img{
+  max-width: 100%;
+  display: block; 
+}
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+.site-container{
+  display: flex;
+  max-width: 820px;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* CARDS SECTION */
+.cards-container{
+  width: 310px;
+  height: 465px;
+  padding: 40px 40px;
+  background-color: #F2F2F2;
+  overflow-y: scroll;
+}
+.cards-header{
+  display: flex;
+  margin-bottom: 30px;
+  align-items: center;
+  justify-content: space-between;
+}
+.cards-logo-text{
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
+  font-size: 21px;
+  color: #000;
+}
+.button-add-card{
+  display: block;
+}
+
+/* CARDS */
+.active{
+  border: 2.5px solid #8793C6;
+}
+.card-list{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  
+}
+.card-item{
+  width: 100%;
+  padding: 8px;
+  border-radius: 7px;
+  background-color: #fff;
+}
+.card-item + .card-item{
+  margin-top: 30px;
+}
+.card-logo{
+  display: block;
+}
+.card-number{
+  margin-bottom: 4px;
+  letter-spacing: 1px;
+}
+.card-valid{
+  margin: 0;
+  font-size: 13px;
+}
+
+/* CARD-FEATURE */
+.card-features-container{
+  display: flex;
+  flex-direction: column;
+  width: 510px;
+  height: 465px;
+  padding: 40px 40px;
+  background-color: #FFF;
+  overflow-y: scroll;
+}
+.features-header{
+  display: flex;
+  margin-bottom: 30px;
+  align-items: center;
+  justify-content: space-between;
+}
+.features-header-text{
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
+  font-size: 21px;
+  color: #000;
+}
+.balance-value{
+  display: flex;
+}
+.balance-value p{
+  padding: 0;
+  margin: 0;
+  font-size: 25px;
+  font-weight: 700;
+  color: #000;
+}
+.balance-value span{
+  font-size: 16px;
+  font-weight: 700;
+  color: #000;
+}
+.features-list{
+  padding: 0;
+  margin: 0;
+  border-top: 1px solid rgba(114, 114, 114, 0.3);
+  list-style: none;
+}
+.feature-item{
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+}
+.feature-button{
+  width: 25px;
+  height: 25px;
+  margin-right: 30px;
+  border: none;
+  outline: none;
+  border: 1px solid #E2E2E2;
+  border-radius: 50%;
+  background-color: transparent;
+  background-size: cover;
+  cursor: pointer;
+}
+.button-minus{
+  background-image: url("img/minus.svg");
+  background-repeat: no-repeat;
+}
+.button-plus{
+  background-image: url("img/plus.svg");
+  background-repeat: no-repeat;
+}
+.feature-info h5{
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+  font-weight: 700;
+  color: #000;
+}
+.feature-info p{
+  padding: 0;
+  margin: 0;
+  font-size: 13px;
+  font-weight: 500;
+}
+.feature-balance-value{
+  display: flex;
+  margin-left: auto;
+  font-weight: 700;
+  font-size: 18px;
+  color: #8797C6;
+  
+}
+.feature-balance-value p{
+  padding: 0;
+  margin: 0;
+}
+.feature-balance-value span{
+  font-size: 12px;
+}
+.balance-funds{
+  color: #90D067;
 }
